refactor yacs config and use kwargs determisticly
Signed-off-by: Aiden-Jeon <aiden.jongseob@gmail.com>

--- a/examples/baseline.ipynb
+++ b/examples/baseline.ipynb
@@ -11,7 +11,7 @@
     "import torchvision\n",
     "from torchvision.models.resnet import ResNet18_Weights\n",
     "\n",
-    "from tta.data import build_loader, CifarDataset"
+    "from tta.data import build_loader, Cifar10CDataset"
    ]
   },
   {
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = CifarDataset()\n",
+    "dataset = Cifar10CDataset()\n",
     "dataset.prepare_dataset()\n",
     "loader = build_loader(dataset)"
    ]
